# financy

./: .gitignore  .gitmodules  CMakeLists.txt  Deploy.json  README.md
Assets/: CMakeLists.txt
Deploy/Windows/: Product.wxs
Script/: Deploy.bat  Deploy.sh  Vendors.bash  Vendors.bat  Vendors.sh
Script/Deploy/: Pack.bat
Script/Deploy/Linux/: Config.json
Script/Deploy/Windows/: Config.json
Script/Deploy/Windows/Packer/: License.rtf  Product.wxs  Windows.sln  Windows.wixproj
Script/Vendors/: OpenCV.bat  OpenCV.sh
Source/: Base.hpp  CMakeLists.txt  Main.cpp  Report.hpp
Source/Core/: Application.cpp  Application.hpp  Core.hpp  FileSystem.cpp  FileSystem.hpp  Globals.cpp  Globals.hpp  Helper.cpp  Helper.hpp
Source/Report/: User.cpp  User.hpp
Source/UI/: Account.cpp  Account.hpp  ColorScheme.cpp  ColorSchene.cpp  ColorSchene.hpp  Colors.cpp  Colors.hpp  Internal.cpp  Internal.hpp  Internals.cpp  Internals.hpp  Purchase.cpp  Purchase.hpp  Statement.cpp  Statement.hpp  User.cpp  User.hpp
UI/Animations/: FadeIn.qml  FadeOut.qml  Main.qrc
UI/Components/: Account.qml  Accounts.qml  Button.qml  ButtonUser.qml  ColorPicker.qml  DatePicker.qml  Dropdown.qml  Footer.qml  Header.qml  Input.qml  Main.qrc  Modal.qml  Page.qml  Popup.qml  RoundImage.qml  ScrollBar.qml  SquircleButton.qml  SquircleContainer.qml  Switch.qml  Text.qml
UI/Components/Chart/: Circle.qml
UI/Components/Finance/: History.qml
UI/Components/Finance/Account/: Item.qml  List.qml  ShareList.qml
UI/Components/Finance/Purchase/: Cancel.qml  Create.qml  Delete.qml  Edit.qml  Item.qml  List.qml
UI/Icons/: Main.qrc
UI/Pages/: Login.qml  Main.qrc  Root.qml  Settings.qml  User.qml
UI/Pages/User/: Create.qml  Edit.qml  Home.qml
UI/Pages/User/Account/: Create.qml  Edit.qml  Home.qml
UI/Pages/User/Finance/: Create.qml  Edit.qml  Home.qml
Vendors/QtOpenCV/: cvmatandqimage.cpp
